Fixed responsiveness on smaller screens for experience section and added resume pdf to about section

--- a/styles.css
+++ b/styles.css
@@ -528,6 +528,14 @@ li {
   outline: none;
 }
 
+@media (max-width: 768px) {
+  .experience-date {
+    font-size: 0.8em; /* Adjust the font size for smaller screens */
+    text-align: center; /* Change the text alignment for smaller screens */
+    padding-bottom: 10px;
+  }
+}
+
 
 /* Projects section */
 #projects {
